[package]
name = "caws"
version = "0.1.7"
edition = "2021"
description = "Chaos on AWS Library"
license = "MIT"
documentation = "https://docs.rs/caws"
repository = "https://github.com/dawsonfi/caws"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
serde = "1.0.152"
serde_json = "1.0.91"
log = "0.4.17"
lambda_runtime = "0.7.2"
async-trait = "0.1.60"

[features]
integration=[]
